# iron

./: CONTRIBUTING.md  README.md  compose.yml
.github/workflows/: python-app.yml
client/: README.md  pyproject.toml
client/edf_iron_client/: __init__.py
client/test/: client.py  subscribe.py
core/: README.md  pyproject.toml
proxy/iris/: README.md  proxy.dist.yml  pyproject.toml
proxy/iris/docker/: Dockerfile  compose.yml  docker-entrypoint.sh
proxy/iris/docker/tpl/: proxy.dist.yml
proxy/iris/edf_iron_x_iris/: client.py
server/: README.md  iron.dist.yml  pyproject.toml
server/docker/: Dockerfile  docker-entrypoint.sh
server/docker/tpl/: constant.dist.yml  iron.dist.yml
server/edf_iron_server/api/: case.py  service.py
server/test/: client.py
web/src/app/components/case/: case.component.html  case.component.ts
web/src/app/services/: interceptor.service.ts
