[project]
name = "edf-iron-client"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["edf", "iron", "client"]
description = "Iron Client"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
  { name="CERT-EDF", email="cert@edf.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = [
    "edf-iron-core~=1.0",
]


[project.urls]
"Homepage" = "https://github.com/cert-edf/iron"
"Repository" = "https://github.com/cert-edf/iron"
"Bug Tracker" = "https://github.com/cert-edf/iron/issues"


[build-system]
requires = ["setuptools>=78", "setuptools_scm>=8.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["edf_iron_client", "edf_iron_client.*"]


[tool.setuptools_scm]
root = ".."
version_file = "edf_iron_client/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true


[tool.isort]
profile = "black"
line_length = 79
