[project]
name = "edf-iron-x-iris"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["edf", "iron", "proxy", "dfir-iris"]
description = "EDF Iron x DFIR IRIS Proxy"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
  { name="CERT-EDF", email="cert@edf.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = [
    "edf-fusion~=1.0",
]


[project.urls]
"Homepage" = "https://github.com/cert-edf/iron"
"Repository" = "https://github.com/cert-edf/iron"
"Bug Tracker" = "https://github.com/cert-edf/iron/issues"


[project.scripts]
"iron-x-iris" = "edf_iron_x_iris.main:app"


[build-system]
requires = ["setuptools>=78", "setuptools_scm>=8.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["edf_iron_x_iris", "edf_iron_x_iris.*"]


[tool.setuptools_scm]
root = "../.."
version_file = "edf_iron_x_iris/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true


[tool.isort]
profile = "black"
line_length = 79
